# GameOverview

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SESSION_SUMMARY.md  USER_TASKS.md  docker-compose.yml  game_dashboard.py  pyproject.toml  wrangler.toml
.claude/agents/: arc42-architect.md  (+3 more)
.fleet/: settings.json
.qlty/: qlty.toml
ai_docs/: HUMAN_TASK.md  SESSION_SUMMARY.md
backend/: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  app.py  coverage-backend.lcov  coverage-backend.xml  fly.toml  hexa_main.py  main.py  pyproject.toml
backend/spikes/: metacritic_howlongtobeat.py
backend/src/: constants.py  epic_parser.py  game_ratings.py  game_to_steam_app_id.py  gog_api.py  gog_parser.py  markdown_parser.py  metacritic_scraper.py  request_rating.py  settings.py  steam_api.py  steam_family_parser.py  steam_parser.py  thumbnails.py  utils.py
backend/src/adapters/game_catalog/: steam_catalog_adapter.py  steam_json_catalog_adapter.py
backend/src/application/services/: game_service.py
backend/src/application/use_cases/: catalog.py  steam_lookup.py
backend/src/domain/entity/: game.py
backend/src/domain/ports/: game_catalog.py  steam_api.py
backend/src/infrastructure/factories/: json_catalog_factory.py
backend/tests/: test_game_dashboard.py  test_game_ratings.py  test_gog_api.py  test_gog_parser.py  test_main.py  test_markdown_parser.py  test_request_rating.py
backend/tests/integration/: test_hexa_main_api.py
backend/tests/steam_catalog/: conftest.py  pytest.ini
backend/tests/steam_catalog/e2e/: test_cache_use_case_integration.py  test_catalog_system.py
backend/tests/steam_catalog/integration/: test_cache_persistence_strategies.py  test_http_steam_api_client.py  test_json_catalog_repository.py  test_legacy_compatibility.py
backend/tests/steam_catalog/performance/: test_large_dataset_performance.py
backend/tests/steam_catalog/unit/: test_catalog_cache.py  test_domain_entities.py  test_domain_services.py
backend/tests/unit/adapters/: test_steam_api_adapter.py  test_steam_json_catalog_adapter.py
docs/: ARCHITECTURE_REVIEW.md  FEATURE_FLAGS.md  FLYIO_DEPLOYMENT.md  SQL.md  STAGING_DEPLOYMENT.md  STEAM_ENRICHMENT_IMPLEMENTATION.md  TESTING.md  learning.md  store-import-scripts.md
frontend/: .env.example  Dockerfile  config-overrides.js  package-lock.json  package.json  tsconfig.json
landing_page/: README.md  deploy.sh  package.json  styles.css  test-site.sh  worker-inline-css.js
pages/: correcting_app_id.py  rating_distribution.py
scripts/: README.md  auto_import_stores.py  convert_parquet_to_sqlite.py  fix-ownership-flags.sql  fix-remove-prefix.sql  import_legacy_data.py  pyproject.toml  seed_sample_data.py  store-auto-export.user.js
src/: constants.py  epic_parser.py  game_dashboard.py  game_ratings.py  game_to_steam_app_id.py  gog_api.py  gog_parser.py  index.js  main.py  markdown_parser.py  request_rating.py  steam_api.py  steam_parser.py  test_gog_parser.py  thumbnails.py  utils.py
tests/: test_game_ratings.py  test_gog_parser.py  test_markdown_parser.py  test_request_rating.py
worker/: .gitignore  package-lock.json  package.json  test-worker.js  vitest.config.ts  wrangler.toml
(+457 files in other folders)
